# FYP_AAE03a

./: Appendix 1_AAE4002 Individual Reflective Essay.docx  Appendix 2_AAE4002 Guidelines for Preparing Interim Report.docx  Appendix 3_AAE4002 Interim Report Assessment Form.docx  Appendix 4_AAE4002 Guidelines for Preparing Final Report.docx  Appendix 5_AAE4002 Final Report Assessment Form.docx  Appendix 6_AAE4002 Oral Presentation Assessment Form.docx  Appendix 7_AAE4002 Log Sheet.docx  README.md
Model/aruco_visual_marker_1/: aruco_visual_marker_1.sdf
Model/iris/: iris.sdf  iris_backup.sdf
PX4_Launch/: new_posix_sitl.launch  new_posix_sitl2.launch
World/: fyp1.world  fyp2.world
archive/presentations/: AAE03a Presentation 1.pptx  AAE03a Presentation 3.pptx
archive/world/: ver01.world
aruco/src/EAruco/: CMakeLists.txt  package.xml
aruco/src/EAruco/src/: EAruco.cpp
aruco_visual_marker_0/: model.sdf
drone_aruco_landing/: CMakeLists.txt  package.xml
drone_aruco_landing/launch/: fyp.launch  fyp1.launch  fyp2.launch  steal.launch  uav_launch.launch
drone_aruco_landing/models/: down_cam.sdf  iris+camera_backup.sdf
drone_aruco_landing/models/Iris_fyp/: model.config  model.sdf
drone_aruco_landing/scripts/: ArucoNavigationServers.py  MarkerDetection.py  opencv_bridge_test1.py  px4_launch_gazebo.sh  px4_launch_gazebo1.sh  target_pos_servers.py
drone_aruco_landing/src/: Aruco.cpp  aruco_detection.py  detect.py  opencv_bridge_test.py  opencv_bridge_test2.py  simpleDrone.py
drone_aruco_landing/worlds/: aruco.world  fyp.world
